# release-to-docs

./: .coverage  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  coverage.xml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: auto-merge.yml  ci-cd.yml
config/: config.yaml
output/: release_CEREZA_V1.4.2.md  release_CEREZA_V1.4.2.xlsx  release_testing.md  release_testing.xlsx  release_v15.0.0.md  release_v15.0.0.xlsx
src/: __init__.py  gitlab.py  main.py  models.py  report.py
src/templates/: report.html.j2  report.md.j2
tests/: test_gitlab.py  test_report.py
