[tool.poetry]
name = "gitlab-release-reporter"
version = "0.1.0"
description = "A tool to generate reports from GitLab releases"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.28.1"
tenacity = "^9.1.2"
pydantic = "^2.0.0"
pandas = "^3.0.0"
reportlab = "^4.0.0"
jinja2 = "^3.1.0"
pyyaml = "^6.0.0"
loguru = "^0.7.0"
prometheus-client = "^0.24.1"
openpyxl = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-mock = "^3.11.0"
pytest-cov = "^7.0.0"
responses = "^0.26.0"
black = "^26.1.0"
flake8 = "^7.3.0"
mypy = "^1.7.0"
types-PyYAML = "^6.0.0"
pre-commit = "^4.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true